Fixed issues with refresh token endpoint and handling by jwt filter